# greenglass-frameworks

./: .gitignore  build.gradle.kts  settings.gradle.kts
gradle/: libs.versions.toml
host-application/: build.gradle.kts
host-control/: build.gradle.kts
host-sparkplug/: build.gradle.kts
host-sparkplug/docs/: core-datatypes.md  host-sparkplug.md  node-architecture.md  sparkplug.md
kotlin/host-frameworks/: build.gradle.kts  build.sh  settings.gradle.kts
kotlin/host-frameworks/gradle/: libs.versions.toml
kotlin/host-frameworks/host-application/: .gitignore  build.gradle.kts
kotlin/host-frameworks/host-control/: build.gradle.kts
kotlin/host-frameworks/host-sparkplug/: build.gradle.kts
kotlin/host-frameworks/node-core/: build.gradle.kts
kotlin/node-frameworks/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/version-catalog/: build.gradle.kts  settings.gradle.kts
node-core/: build.gradle.kts
python/ProcessEngine/: Dockerfile  README.md  pyproject.toml
python/ProcessEngine/config/processes/: LIGHTING.py  STATE_MANAGEMENT.py
python/ProcessEngine/config/systems/: GROW_PIPES_SYSTEM.yaml
python/ProcessEngine/docker/: Dockerfile  requirements.txt
python/ProcessEngine/src/process-engine/: configuration.py  engine.py  process.py  sync_variable_value.py  variable_value_message.py  variables.py
python/ProcessEngine/src/processengine/: configuration.py  engine.py  process.py  sync_variable_value.py  variable_value_message.py  variables.py
sparkplug/: build.gradle.kts
sparkplug/docs/: node-configuration.md  sparkplug-primer.md
(+367 files in other folders)
